[package]
name = "pemi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pemi"
path = "src/bin/main.rs"

[features]
cycles = []

[dependencies]
octets = { version = "0.3", path = "../octets" }
nix = {version = "0.29", features = ["socket", "net", "uio"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = {version = "4.5", features = ["derive"]}
socket2 = { version = "0.5", features = ["all"] }
pnet = { version = "0.35"}
libc = "0.2"

[dev-dependencies]
hex = "0.4"